crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__too_many_blank_lines_isort_compatibility-lines-after(1)-between(1).snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> E30_isort.py:1:1
  |
1 | / import json
2 | |
3 | |
4 | |
5 | | from typing import Any, Sequence
  | |________________________________^
help: Organize imports
  |
1 + import json
2 + 
3 + from typing import Any, Sequence
  |

E303 [*] Too many blank lines (3)
 --> E30_isort.py:5:1
  |
5 | from typing import Any, Sequence
  | ^^^^
help: Remove extraneous blank line(s)
2 - 
3 - 
4 - 
  |

E303 [*] Too many blank lines (2)
 --> E30_isort.py:8:1
  |
8 | class MissingCommand(TypeError): ...  # noqa: N818
  | ^^^^^
help: Remove extraneous blank line(s)
6 - 
7 - 
  |

E303 [*] Too many blank lines (2)
  --> E30_isort.py:21:5
   |
21 |     abcd.foo()
   |     ^^^^
22 |
23 | def __init__(self, backend_module: str, backend_obj: str | None) -> None: ...
   |
help: Remove extraneous blank line(s)
19 - 
20 - 
   |

I001 [*] Import block is un-sorted or un-formatted
  --> E30_isort.py:26:5
   |
25 |   if TYPE_CHECKING:
26 | /     import os
27 | |
28 | |
29 | |
30 | |     from typing_extensions import TypeAlias
   | |___________________________________________^
help: Organize imports
   |
26 +     import os
27 + 
28 +     from typing_extensions import TypeAlias
   |

E303 [*] Too many blank lines (3)
  --> E30_isort.py:30:5
   |
30 |     from typing_extensions import TypeAlias
   |     ^^^^
help: Remove extraneous blank line(s)
27 - 
28 - 
29 - 
   |

E303 [*] Too many blank lines (2)
  --> E30_isort.py:33:5
   |
33 |     abcd.foo()
   |     ^^^^
34 |
35 | def __call__(self, name: str, *args: Any, **kwargs: Any) -> Any:
   |
help: Remove extraneous blank line(s)
31 - 
32 - 
   |
