crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__trailing-whitespace_W291.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W291 [*] Trailing whitespace
 --> W291.py:1:23
  |
1 | '''trailing whitespace 
  |                       ^
2 | inside a multiline string'''
  |
help: Remove trailing whitespace
  |
  - '''trailing whitespace 
1 + '''trailing whitespace
2 | inside a multiline string'''
  |
note: This is an unsafe fix and may change runtime behavior

W291 [*] Trailing whitespace
 --> W291.py:4:24
  |
2 | inside a multiline string'''
3 |
4 | f'''trailing whitespace 
  |                        ^
5 | inside a multiline f-string'''
  |
help: Remove trailing whitespace
  |
3 |
  - f'''trailing whitespace 
4 + f'''trailing whitespace
5 | inside a multiline f-string'''
  |
note: This is an unsafe fix and may change runtime behavior

W291 [*] Trailing whitespace
  --> W291.py:8:8
   |
 7 | # Trailing whitespace after `{`
 8 | f'abc { 
   |        ^
 9 |     1 + 2
10 | }'
   |
help: Remove trailing whitespace
  |
7 | # Trailing whitespace after `{`
  - f'abc { 
8 + f'abc {
9 |     1 + 2
  |

W291 [*] Trailing whitespace
  --> W291.py:14:10
   |
12 | # Trailing whitespace after `2`
13 | f'abc {
14 |     1 + 2 
   |          ^
15 | }'
   |
help: Remove trailing whitespace
   |
13 | f'abc {
   -     1 + 2 
14 +     1 + 2
15 | }'
   |
