crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__unexpected-indentation-comment_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:9:1
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^^^^^
10 | #: E113
11 | print()
   |

invalid-syntax: Unexpected indentation
  --> E11.py:12:1
   |
10 | #: E113
11 | print()
12 |     print()
   | ^^^^
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   |

E116 Unexpected indentation (comment)
  --> E11.py:15:1
   |
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
15 |      # 'httpd/unix-directory'
   | ^^^^^
16 | create_date = False
17 | #: E116 E116 E116
   |

E116 Unexpected indentation (comment)
  --> E11.py:22:1
   |
20 |         self.master.start()
21 |         # try:
22 |             # self.master.start()
   | ^^^^^^^^^^^^
23 |         # except MasterExit:
24 |             # self.shutdown()
   |

E116 Unexpected indentation (comment)
  --> E11.py:24:1
   |
22 |             # self.master.start()
23 |         # except MasterExit:
24 |             # self.shutdown()
   | ^^^^^^^^^^^^
25 |         # finally:
26 |             # sys.exit()
   |

E116 Unexpected indentation (comment)
  --> E11.py:26:1
   |
24 |             # self.shutdown()
25 |         # finally:
26 |             # sys.exit()
   | ^^^^^^^^^^^^
27 | #: E115 E115 E115 E115 E115 E115
28 | def start(self):
   |

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:45:1
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^^^^^
46 | #:
47 | if False:
   |
