crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__useless-semicolon_E703.ipynb.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E703 [*] Statement ends with an unnecessary semicolon
 --> E703.ipynb:5:2
  |
3 | x;
4 | # Only skip the last expression
5 | x;  # E703
  |  ^
6 | x;
7 | # Nested expressions isn't relevant
  |
help: Remove unnecessary semicolon
  |
4 | # Only skip the last expression
  - x;  # E703
5 + x  # E703
6 | x;
  |

E703 [*] Statement ends with an unnecessary semicolon
  --> E703.ipynb:9:6
   |
 7 | # Nested expressions isn't relevant
 8 | if True:
 9 |     x;
   |      ^
10 | # Semicolons with multiple expressions
11 | x; x;
   |
help: Remove unnecessary semicolon
   |
8  | if True:
   -     x;
9  +     x
10 | # Semicolons with multiple expressions
   |
