crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__w292_4.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W292 [*] No newline at end of file
 --> W292_4.py:1:2
  |
1 |  
  |  ^
help: Add trailing newline
  |
1 +  
  |
